# thee-me-api

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  back2  deploy.sh  docker-compose.yaml  main.py  pyproject.toml  servers
.github/workflows/: deploy.yaml
alembic/: env.py
alembic/versions/: 045109d52f65_making_mobile_default.py  1df0737d6960_adding_user_id_to_the_services.py  2202a2def64f_correction.py  24ccb9016248_education_new_columns.py  3c5062aca24d_adding_order_and_show_on_profile_tag_to_.py  3e5c4d2b3251_repositories_table.py  3ef5ebf3732e_upgrade_to_relationships_revert.py  472b7df179a1_updating_user_model_for_skills_again.py  474d7259ab7d_projects.py  4e4ee630e8e3_some_alterations.py  5243c4e893fe_changing_again.py  55184c4301c5_overlaps.py  63950dd689b5_mking_a_unique_foreign_key_for_user_.py  6c8d1d2a4d83_user_services.py  7236779cf2fa_relationships.py  77ca191bbb11_adding_order_and_show_on_profile_tag_to_.py  7b6b238a6431_skill_mapping_change.py  7f31e8dc478c_correction_ex.py  849379c8a023_relationships2.py  8e4130f1af80_reverting_skill_mapping.py  8f24e058914a_experiences.py  96040fb19280_adding_address.py  983317122ead_upgrade_to_relationships.py  9a33506b94f1_new_coloumn_for_education.py  9af0577cfc9c_correction_exe.py  a0c9260c5dcf_email_table.py  a241ab4bacf8_adding_order_and_show_on_profile_tag_to_.py  a3e02cd670b0_initial.py  a6f29f904180_upgrade_to_relationships_revert_again.py  b97c3ef125e7_making_skill_name_unique.py  c7ce8984ad07_some_alterations3.py  ca4e49c155b9_proj2.py  cc544c092464_initial.py  (+4 more)
thee_me/: pass.db
(+60 files in other folders)
