[tool.poetry]
name = "thee-me"
version = "0.1.0"
description = ""
authors = ["thee <theekshana.sandaru@gmail.com>"]
readme = "README.md"
packages = [{include = "thee_me"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.14"
alembic = "^1.11.1"
isort = "^5.12.0"
black = "^23.3.0"
psycopg2-binary = "^2.9.6"
pydantic = "^1.10.7"
bcrypt = "^4.0.1"
asyncpg = "^0.27.0"
greenlet = "^2.0.2"
fastapi-jwt-auth = "^0.5.0"
email-validator = "^2.0.0.post2"
python-dotenv = "^1.0.1"
apscheduler = "^3.10.4"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
